all data knn grid search, all data second layer test

--- a/Simple NN.ipynb
+++ b/Simple NN.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8b895880",
    "metadata": {},
    "outputs": [],
@@ -164,10 +164,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ae3f44",
+   "id": "a79287c5",
    "metadata": {},
    "source": [
-    "Single hidden layer"
+    "### Single hidden layer"
    ]
   },
   {
@@ -610,15 +610,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "376c90bb",
+   "id": "56cf6152",
    "metadata": {},
    "source": [
-    "Testing on all the train data"
+    "### Testing on all the train data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d156758b",
    "metadata": {},
    "outputs": [],
@@ -845,10 +845,105 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bf04522",
+   "id": "ebd074e7",
    "metadata": {},
    "source": [
-    "It looks like 500 for the first layer is optimal. We got simmilar results with second layer 300 and 50, but worse with second layer 200 or 100. What is more it seems that we start to overfit because the train results are better than the test. We will try 500-300-50."
+    "It looks like 500 for the first layer is optimal. We got simmilar results with second layer 300 and 50, but worse with second layer 200 or 100."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd34ee29",
+   "metadata": {},
+   "source": [
+    "### All data test for (500, 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cafed8f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformer = torchvision.transforms.Compose([torchvision.transforms.ToTensor(),\n",
+    "                                              transforms.Lambda(lambda x: torch.flatten(x))])\n",
+    "\n",
+    "train_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=True, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "test_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=False, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "batch_size_train= len(train_set)\n",
+    "batch_size_test=len(test_set)\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "  train_set,\n",
+    "  batch_size=batch_size_train, shuffle=True)\n",
+    "\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "  test_set,\n",
+    "  batch_size=batch_size_test, shuffle=True)\n",
+    "\n",
+    "train_enumerated = enumerate(train_loader)\n",
+    "batch_idx, (train_x, train_y) = next(train_enumerated)\n",
+    "\n",
+    "test_enumerated = enumerate(test_loader)\n",
+    "batch_idx, (test_x, test_y) = next(test_enumerated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9ac7106e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      0.81      0.84      1000\n",
+      "           1       0.99      0.97      0.98      1000\n",
+      "           2       0.83      0.83      0.83      1000\n",
+      "           3       0.88      0.92      0.90      1000\n",
+      "           4       0.81      0.84      0.82      1000\n",
+      "           5       0.98      0.96      0.97      1000\n",
+      "           6       0.73      0.73      0.73      1000\n",
+      "           7       0.93      0.98      0.95      1000\n",
+      "           8       0.98      0.97      0.97      1000\n",
+      "           9       0.98      0.96      0.97      1000\n",
+      "\n",
+      "    accuracy                           0.90     10000\n",
+      "   macro avg       0.90      0.90      0.90     10000\n",
+      "weighted avg       0.90      0.90      0.90     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlp = MLPClassifier(random_state=0, alpha=0.001, hidden_layer_sizes=(500, 300))\n",
+    "\n",
+    "mlp.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, mlp.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51b672af",
+   "metadata": {},
+   "source": [
+    "### Third hidden layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e126b105",
+   "metadata": {},
+   "source": [
+    "It seems that we start to overfit because the train results are better than the test. We will try 500-300-50."
    ]
   },
   {
